新冠疫情组件

--- a/src/pages/query/components/Covid/index.less
+++ b/src/pages/query/components/Covid/index.less
@@ -1,4 +1,18 @@
 @import '../../../../global.less';
 .covid {
   .cardStyle();
+  .info {
+    .title {
+      color: #333;
+      font-size: 15px;
+      font-weight: 800;
+    }
+    .count {
+      font-weight: 800;
+      font-size: 18px;
+    }
+    .diff {
+      color: #999;
+    }
+  }
 }
