文档首页，首页社区标题修改

--- a/src/pages/query/components/Covid/index.less
+++ b/src/pages/query/components/Covid/index.less
@@ -1,7 +1,9 @@
 @import '../../../../global.less';
 .covid {
   .cardStyle();
+  padding-bottom: 10px;
   .info {
+    text-align: center;
     .title {
       color: #333;
       font-size: 15px;
